# api/swagger/swagger.yaml
@@ -86,6 +86,26 @@ paths:
           description: No categories to list with the given parameter set.
         '500':
           description: Internal server error
+  /v1/users/password:
+    x-swagger-router-controller: controller
+    post:
+      description: Change user password
+      operationId: v1_changePassword
+      parameters:
+        - name: data
+          in: body
+          description: Payload to change password
+          schema:
+            $ref: '#/definitions/user_password'
+      responses:
+        '200':
+          description: Success message for password change
+        '400':
+          description: Bad parameters
+        '404':
+          description: No categories to list with the given parameter set.
+        '500':
+          description: Internal server error
   '/v1/users/{id}':
     x-swagger-router-controller: controller
     get:
@@ -527,7 +547,15 @@ definitions:
       email:
         type: string
       password:
-        type: string      
+        type: string
+  user_password:
+    properties:
+      email:
+        type: string
+      currentPassword:
+        type: string
+      newPassword:
+        type: string     
   users_create:
     properties:
       _id:
